--- a/ShoppingList/Base.lproj/Main.storyboard
+++ b/ShoppingList/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Shopping List-->
@@ -14,13 +15,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="listItem" id="b4g-nR-OqT">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="listItem" id="b4g-nR-OqT" customClass="ItemTableViewCell" customModule="ShoppingList" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="b4g-nR-OqT" id="LkP-gf-xkM">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" onImage="complete" offImage="incomplete" translatesAutoresizingMaskIntoConstraints="NO" id="BRA-9o-2r0">
+                                            <rect key="frame" x="543" y="8" width="51" height="31"/>
+                                        </switch>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EzY-JU-SaS">
+                                            <rect key="frame" x="8" y="8" width="478" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="478" id="cHM-Q1-S4R"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="EzY-JU-SaS" firstAttribute="leading" secondItem="LkP-gf-xkM" secondAttribute="leadingMargin" id="3EB-5Y-ovU"/>
+                                        <constraint firstItem="EzY-JU-SaS" firstAttribute="top" secondItem="LkP-gf-xkM" secondAttribute="topMargin" id="QYb-xM-fr1"/>
+                                        <constraint firstItem="BRA-9o-2r0" firstAttribute="top" secondItem="EzY-JU-SaS" secondAttribute="top" id="cJz-ae-esd"/>
+                                        <constraint firstItem="BRA-9o-2r0" firstAttribute="trailing" secondItem="LkP-gf-xkM" secondAttribute="trailingMargin" id="gLa-K7-bW5"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="completionSwitch" destination="BRA-9o-2r0" id="Lla-aB-5Yg"/>
+                                    <outlet property="itemLabel" destination="EzY-JU-SaS" id="R3W-yG-885"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -57,4 +81,8 @@
             <point key="canvasLocation" x="303" y="342"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="complete" width="512" height="512"/>
+        <image name="incomplete" width="512" height="512"/>
+    </resources>
 </document>
